# ecommerce-backend

./: .dockerignore  .env.example  Dockerfile  Taskfile.yml  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 007b2bd311cf_added_order_and_order_item.py  3be6a200f2dd_init_models.py  43d9397973df_added_total_amount_in_order_table.py  45f73b8e69a9_added_relationship.py  626843a5fd86_added_the_category_and_subcategory.py  702babe8e468_init_db.py  7c9b7643a372_init_models.py  83d959bc0b6c_init_db.py  97e41bad48e7_updated_the_user.py  98cce2ba36ea_init_models.py  ac0f497b9505_init_models.py  b95ff4e725fc_added_products.py  bae5fcad1c6b_added_the_cart_and_cart_items.py
api/: __init__.py
api/v1/: __init__.py
app/controllers/: __init__.py  auth.py  cart.py  cart_item.py  category.py  order.py  order_item.py  product.py  sub_category.py  user.py
app/integrations/: email.py
app/models/: __init__.py  cart.py  cart_item.py  category.py  order.py  order_item.py  product.py  sub_category.py  user.py
app/repositories/: __init__.py  cart.py  cart_item.py  category.py  order.py  order_item.py  product.py  sub_category.py  user.py
core/: config.py  server.py
core/controller/: base.py
core/database/: __init__.py  base.py  session.py
core/dependencies/: auth.py  cart.py  controller.py  redis.py  repository.py  security.py  session.py  stores.py  user.py
core/exceptions/: __init__.py  jwt.py
core/factory/: __init__.py  controller.py  repository.py
core/redis/: __init__.py  client.py
core/repository/: base.py
core/security/: jwt.py  (+2 more)
(+40 files in other folders)
